@@ -1,3 +1,5 @@
+	- Sync RegionName.cs with more recent FIPS codes ( 20090723 ). ( Boris Zentner )
+	- Guard most functions in lookupService by either lock or [MethodImpl(MethodImplOptions.Synchronized)] ( Kfir Harel )
 1.11	May 16th, 2009
 	- Fix IndexOutOfRangeException error when a lookup end in the last valid
 	      netblock using GEOIP_MEMORY_CACHE mode ( Boris Zentner )
